--- a/sims.csproj
+++ b/sims.csproj
@@ -272,6 +272,12 @@
     <Compile Include="Admin Side\Sales\Product Sales.Designer.cs">
       <DependentUpon>Product Sales.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin Side\Sales\Sales Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin Side\Sales\Sales Form.Designer.cs">
+      <DependentUpon>Sales Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Admin Side\Stocks\Add Stock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -485,6 +491,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin Side\Sales\Product Sales.resx">
       <DependentUpon>Product Sales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin Side\Sales\Sales Form.resx">
+      <DependentUpon>Sales Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin Side\Stocks\Add Stock.resx">
       <DependentUpon>Add Stock.cs</DependentUpon>
